CREATE TABLE universities (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    CONSTRAINT uk_universities_name UNIQUE (name)
);

CREATE TABLE pickup_locations (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    university_id INTEGER NOT NULL REFERENCES universities(id),
    name VARCHAR(100) NOT NULL,
    CONSTRAINT uk_pickup_location_university_name UNIQUE (university_id, name)
);

CREATE TABLE users (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    university_id INTEGER REFERENCES universities(id),
    email VARCHAR(100) NOT NULL,
    name VARCHAR(50) NOT NULL,
    department VARCHAR(100),
    profile_image_url VARCHAR(255),
    password_hash VARCHAR(60),
    oauth_provider VARCHAR(20) NOT NULL,
    oauth_id VARCHAR(100) NOT NULL,
    role VARCHAR(10) NOT NULL,
    status VARCHAR(20) NOT NULL,
    sanctioned_until TIMESTAMP,
    sanction_reason VARCHAR(500),
    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP NOT NULL,
    CONSTRAINT uk_users_email UNIQUE (email),
    CONSTRAINT uk_users_oauth UNIQUE (oauth_provider, oauth_id)
);

CREATE TABLE items (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    owner_id INTEGER NOT NULL REFERENCES users(id),
    pickup_location_id INTEGER REFERENCES pickup_locations(id),
    type VARCHAR(10) NOT NULL,
    title VARCHAR(100) NOT NULL,
    rental_fee INTEGER NOT NULL,
    rental_unit VARCHAR(10) NOT NULL,
    description TEXT,
    precautions TEXT,
    status VARCHAR(20) NOT NULL,
    view_count INTEGER NOT NULL,
    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP NOT NULL
);

CREATE TABLE item_images (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    item_id INTEGER NOT NULL REFERENCES items(id),
    image_url VARCHAR(500) NOT NULL,
    sort_order INTEGER NOT NULL,
    created_at TIMESTAMP NOT NULL
);

CREATE TABLE wishlists (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER NOT NULL REFERENCES users(id),
    item_id INTEGER NOT NULL REFERENCES items(id),
    created_at TIMESTAMP NOT NULL,
    CONSTRAINT uk_wishlist_user_item UNIQUE (user_id, item_id)
);

CREATE TABLE chat_rooms (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    item_id INTEGER NOT NULL REFERENCES items(id),
    borrower_id INTEGER NOT NULL REFERENCES users(id),
    lender_id INTEGER NOT NULL REFERENCES users(id),
    created_at TIMESTAMP NOT NULL,
    CONSTRAINT uk_chat_room_item_borrower_lender
        UNIQUE (item_id, borrower_id, lender_id)
);

CREATE TABLE chat_messages (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    chat_room_id INTEGER NOT NULL REFERENCES chat_rooms(id),
    sender_id INTEGER NOT NULL REFERENCES users(id),
    message TEXT NOT NULL,
    is_read BOOLEAN NOT NULL,
    created_at TIMESTAMP NOT NULL
);

CREATE INDEX idx_chat_message_room_created
    ON chat_messages(chat_room_id, created_at);
CREATE INDEX idx_chat_message_unread
    ON chat_messages(chat_room_id, is_read);

CREATE TABLE rentals (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    item_id INTEGER NOT NULL REFERENCES items(id),
    borrower_id INTEGER NOT NULL REFERENCES users(id),
    lender_id INTEGER NOT NULL REFERENCES users(id),
    chat_room_id INTEGER NOT NULL REFERENCES chat_rooms(id),
    start_date TIMESTAMP NOT NULL,
    end_date TIMESTAMP,
    total_price INTEGER NOT NULL,
    status VARCHAR(20) NOT NULL,
    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP NOT NULL
);

CREATE TABLE reports (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    reporter_id INTEGER NOT NULL REFERENCES users(id),
    reported_user_id INTEGER REFERENCES users(id),
    item_id INTEGER REFERENCES items(id),
    chat_room_id INTEGER REFERENCES chat_rooms(id),
    reason VARCHAR(1000) NOT NULL,
    status VARCHAR(20) NOT NULL,
    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP NOT NULL,
    handled_at TIMESTAMP
);

CREATE TABLE recommendations (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER NOT NULL REFERENCES users(id),
    department VARCHAR(100),
    time_period VARCHAR(30) NOT NULL,
    is_exam_period BOOLEAN NOT NULL,
    weather_status VARCHAR(30) NOT NULL,
    headline VARCHAR(255),
    created_at TIMESTAMP NOT NULL
);

CREATE TABLE recommendation_interests (
    recommendation_id INTEGER NOT NULL REFERENCES recommendations(id),
    interest_item VARCHAR(100)
);

CREATE TABLE recommendation_keywords (
    recommendation_id INTEGER NOT NULL REFERENCES recommendations(id),
    keyword VARCHAR(100) NOT NULL,
    display_order INTEGER NOT NULL
);

CREATE TABLE recommendation_reasons (
    recommendation_id INTEGER NOT NULL REFERENCES recommendations(id),
    reason VARCHAR(1000) NOT NULL,
    display_order INTEGER NOT NULL
);

CREATE TABLE recommendation_items (
    recommendation_id INTEGER NOT NULL REFERENCES recommendations(id),
    item_id INTEGER NOT NULL REFERENCES items(id),
    display_order INTEGER NOT NULL,
    CONSTRAINT uk_recommendation_item UNIQUE (recommendation_id, item_id)
);

CREATE TABLE user_device_tokens (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER NOT NULL REFERENCES users(id),
    token VARCHAR(512) NOT NULL,
    platform VARCHAR(10) NOT NULL,
    enabled BOOLEAN NOT NULL,
    updated_at TIMESTAMP NOT NULL,
    CONSTRAINT uk_device_token UNIQUE (token)
);

CREATE INDEX idx_device_token_user_enabled
    ON user_device_tokens(user_id, enabled);
